force-app/main/default/objects/Account/fields/testFieldAccount1__c.field-meta.xml
<CustomField>
    <fullName>testFieldAccount1__c</fullName>
    <description>Campo de prueba en cuentas 1</description>
    <inlineHelpText>Campo de prueba en cuentas 1</inlineHelpText>
    <label>Campo de prueba 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>