force-app/main/default/objects/Account/fields/testFieldAccount2__c.field-meta.xml
<CustomField>
    <fullName>testFieldAccount2__c</fullName>
    <description>Campo de prueba en cuentas 2</description>
    <inlineHelpText>Campo de prueba en cuentas 2</inlineHelpText>
    <label>Campo de prueba 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>