force-app/main/default/objects/Account/fields/testFieldAccount3__c.field-meta.xml
<CustomField>
    <fullName>testFieldAccount3__c</fullName>
    <description>Campo de prueba en cuentas 3</description>
    <inlineHelpText>Campo de prueba en cuentas 3</inlineHelpText>
    <label>Campo de prueba 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>